--- a/src/View/Records.fxml
+++ b/src/View/Records.fxml
@@ -13,20 +13,20 @@
             <Label fx:id="Records1Label" layoutX="56.0" layoutY="14.0" text="Total Number of Customer Appointments" />
             <RadioButton fx:id="TypeRadioButton" layoutX="119.0" layoutY="43.0" mnemonicParsing="false" selected="true" text="Type" />
             <RadioButton fx:id="MonthRadioButton" layoutX="214.0" layoutY="43.0" mnemonicParsing="false" text="Month" />
-            <Button fx:id="GenerateButton1" layoutX="145.0" layoutY="79.0" mnemonicParsing="false" onAction="#Generate" prefHeight="27.0" prefWidth="124.0" text="GENERATE" />
+            <Button fx:id="GenerateButton1" layoutX="145.0" layoutY="79.0" mnemonicParsing="false" onAction="#Generate1" prefHeight="27.0" prefWidth="124.0" text="GENERATE" />
          </children>
       </Pane>
       <Pane layoutX="66.0" layoutY="206.0" prefHeight="144.0" prefWidth="224.0" style="-fx-background-color: white;">
          <children>
             <Label layoutX="44.0" layoutY="8.0" text="Schedule by User" />
-            <Button fx:id="GenerateButton2" layoutX="50.0" layoutY="91.0" mnemonicParsing="false" onAction="#Generate" prefHeight="27.0" prefWidth="124.0" text="GENERATE" />
+            <Button fx:id="GenerateButton2" layoutX="50.0" layoutY="91.0" mnemonicParsing="false" onAction="#Generate2" prefHeight="27.0" prefWidth="124.0" text="GENERATE" />
             <ComboBox fx:id="Records2Combo" layoutX="37.0" layoutY="42.0" prefWidth="150.0" />
          </children>
       </Pane>
       <Pane layoutX="300.0" layoutY="206.0" prefHeight="144.0" prefWidth="216.0" style="-fx-background-color: white;">
          <children>
             <Label fx:id="Records3Label" layoutX="13.0" layoutY="7.0" text="Total Appt by Customer" />
-            <Button fx:id="GenerateButton" layoutX="46.0" layoutY="91.0" mnemonicParsing="false" onAction="#Generate" prefHeight="27.0" prefWidth="124.0" text="GENERATE" />
+            <Button fx:id="GenerateButton" layoutX="46.0" layoutY="91.0" mnemonicParsing="false" onAction="#Generate3" prefHeight="27.0" prefWidth="124.0" text="GENERATE" />
             <ComboBox fx:id="Records3Combo" layoutX="33.0" layoutY="42.0" prefWidth="150.0" />
          </children>
       </Pane>
